Init GET and PUT routes and better Swagger response docs
