# api/session.go
@@ -6,9 +6,12 @@ import (
 	"net/http"
 
 	"github.com/unweave/unweave-v2/config"
+	"github.com/unweave/unweave-v2/session/runtime"
 )
 
-// swagger:route POST /session/{id} session sessionCreate
+// ---------------------------------------------------------------------------------------
+// SessionCreate POST /session
+// ---------------------------------------------------------------------------------------
 
 // swagger:parameters sessionCreate
 type sessionCreateRequest struct {
@@ -30,7 +33,7 @@ func (s *SessionCreateRequest) Bind(r *http.Request) error {
 	return nil
 }
 
-// swagger:response sessionCreateResponse
+// swagger:response sessionCreate
 type sessionCreateResponse struct {
 	// in: body
 	Body SessionCreateResponse
@@ -38,4 +41,35 @@ type sessionCreateResponse struct {
 
 type SessionCreateResponse struct {
 	ID string `json:"id"`
+}
+
+// ---------------------------------------------------------------------------------------
+// SessionGet GET /session/{id}
+// ---------------------------------------------------------------------------------------
+
+// swagger:response sessionGet
+type sessionGetResponse struct {
+	// in: body
+	Body SessionGetResponse
+}
+
+type SessionGetResponse struct {
+	ID     string         `json:"id"`
+	Status runtime.Status `json:"runtimeStatus"`
+}
+
+// ---------------------------------------------------------------------------------------
+// SessionConnect PUT /session/{id}/connect
+// ---------------------------------------------------------------------------------------
+
+// swagger:response sessionConnect
+type sessionConnectResponse struct {
+	// in: body
+	Body SessionConnectResponse
+}
+
+type SessionConnectResponse struct {
+	ID         string                `json:"id"`
+	Status     runtime.Status        `json:"runtimeStatus"`
+	Connection runtime.SSHConnection `json:"sshConnection"`
 }
